--- a/client_side/client/src/stylesheets/components/_nav.scss
+++ b/client_side/client/src/stylesheets/components/_nav.scss
@@ -1,10 +1,12 @@
 .nav-container {
-    height: 15vh;
+    background:#FFFFFF;
     box-shadow: 0 8px 6px -6px #888888;
+    height: 15vh;
     display: flex;
     align-items: center;
     justify-content: left;
     img {
+        background: #FFFFFF;
         width: 35%;
     }
 }
