--- a/client_side/client/src/stylesheets/components/_features.scss
+++ b/client_side/client/src/stylesheets/components/_features.scss
@@ -3,16 +3,16 @@
     flex-direction: column;
     
     background: white;
-    border-radius: 25px;
+    border-radius: 10px;
     padding: 20px;
+    margin: 25px 20px;
 
-    
-    -webkit-box-shadow: 4px 16px 122px -11px #888888;
-    -moz-box-shadow: 4px 16px 122px -11px #888888;
-    box-shadow: 4px 16px 122px -11px #888888;
+    -webkit-box-shadow: 0 10px 20px rgba(0,0,0, .06),
+    0 6px 6px rgba(0,0,0, .07);
+    -moz-box-shadow: 0 10px 20px rgba(0,0,0, .06),
+    0 6px 6px rgba(0,0,0, .07);
+    box-shadow: 0 10px 20px rgba(0,0,0, .06),
+    0 6px 6px rgba(0,0,0, .07);
 
-    margin: 20px;
-
-    
 }
 
