--- a/client_side/client/src/stylesheets/components/_features.scss
+++ b/client_side/client/src/stylesheets/components/_features.scss
@@ -1,3 +1,5 @@
+@import "../abstracts/_mixin.scss";
+
 .feature-container {
     display: flex;
     flex-direction: column;
@@ -7,12 +9,6 @@
     padding: 20px;
     margin: 25px 20px;
 
-    -webkit-box-shadow: 0 10px 20px rgba(0,0,0, .06),
-    0 6px 6px rgba(0,0,0, .07);
-    -moz-box-shadow: 0 10px 20px rgba(0,0,0, .06),
-    0 6px 6px rgba(0,0,0, .07);
-    box-shadow: 0 10px 20px rgba(0,0,0, .06),
-    0 6px 6px rgba(0,0,0, .07);
-
+    @include boxshadow;
 }
 
