--- a/client_side/client/src/stylesheets/components/_features.scss
+++ b/client_side/client/src/stylesheets/components/_features.scss
@@ -4,11 +4,14 @@
     display: flex;
     flex-direction: column;
     
+    height: 42vh;
+
     background: white;
     border-radius: 10px;
     padding: 20px;
     margin: 25px 20px;
 
     @include boxshadow;
+
 }
 
