decorates the features with some gradient effects

--- a/client_side/client/src/stylesheets/components/_all.scss
+++ b/client_side/client/src/stylesheets/components/_all.scss
@@ -1,3 +1,8 @@
+//main components folder
 @import "app";
 @import "features";
 @import "nav";
+
+//utils folder
+@import "../utils/button";
+@import "../utils/placeholders";
