--- a/client_side/client/src/stylesheets/components/_features.scss
+++ b/client_side/client/src/stylesheets/components/_features.scss
@@ -3,20 +3,36 @@
 .feature-container {
     display: flex;
     flex-direction: column;
-    
-    height: 42vh;
+    justify-content: space-around;
+    height: 30vh;
 
-    background: linear-gradient(to bottom, coral 22%, white 25%);
+
+    color:white;
+    background: coral;
     border-radius: 10px;
     padding: 20px;
     margin: 25px 20px;
 
     @include boxshadow;
+    .feature-items {
+        height:100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .feature-description {
+        display: flex;
+        flex-direction: row;
+    }
 
     .feature-name {
         height: 20%;
         color: white;
     }
+
+    
 
 }
 
