--- a/client_side/client/src/stylesheets/main.scss
+++ b/client_side/client/src/stylesheets/main.scss
@@ -12,3 +12,9 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+input {
+  background-color: coral;
+  border: none;
+  border-bottom: 2px solid white;
+}
