--- a/client_side/client/src/stylesheets/abstracts/_mixin.scss
+++ b/client_side/client/src/stylesheets/abstracts/_mixin.scss
@@ -1,10 +1,10 @@
 @mixin boxshadow {
-    -webkit-box-shadow: 0 10px 20px rgba(0,0,0, .06),
-    0 3px 3px rgba(0,0,0, .07);
-    -moz-box-shadow: 0 10px 20px rgba(0,0,0, .06),
-    0 3px 3px rgba(0,0,0, .07);
-    box-shadow: 0 10px 20px rgba(0,0,0, .06),
-    0 3px 3px rgba(0,0,0, .07);
+    -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.06),
+    0 10px 10px rgba(0, 0, 0, 0.17);
+    -moz-box-shadow: 0 15px 25px rgba(0,0,0, .06),
+    0 10px 10px rgba(0,0,0, 0.17);
+    box-shadow: 0 15px 25px rgba(0,0,0, .06),
+    0 10px 10px rgba(0,0,0, 0.17);
 }
 
 @mixin boxshadow_bottom {
