--- a/client_side/client/src/stylesheets/components/_features.scss
+++ b/client_side/client/src/stylesheets/components/_features.scss
@@ -1,11 +1,14 @@
 @import "../abstracts/_mixin.scss";
 
+$duration: 5s;
+$perspective: 10rem;
+$degree: 90deg;
+
 .feature-container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 30vh;
-
 
     color:white;
     background: coral;
@@ -13,7 +16,92 @@
     padding: 20px;
     margin: 25px 20px;
     @include boxshadow;
+    //for 3d functionality
+    perspective: 700;
+    .flip-container {
+        transition: all 0.6s ease;
+        transform-style: preserve-3d;
+        .front, .back {
+            backface-visibility: hidden;
+        }
     
+        .back {
+            transform: rotateY(180deg);
+        }
+    }
+
+    .flip-container:hover {
+        transform: rotateY(180deg);
+    }
+
+    // .front {
+    //     z-index: 1;
+    //     position: relative;
+    //     &.flip-to-back {
+    //         @keyframes back-flip-1 {
+    //             0% {
+    //                 transform: rotateY(0deg); z-index: 1
+    //             }
+    //             50% {
+    //                 transform: rotateY($degree) perspective($perspective); z-index: 1
+    //             }
+    //             100% {
+    //                 transform: rotateY($degree); z-index: -1
+    //             }
+    //         }
+    //         animation: back-flip-1 $duration 1 forwards;
+    //     }
+
+    //     &.flip-to-front {
+    //         animation: front-flip-1 $duration 1 forwards;
+    //         @keyframes front-flip-1 {
+    //             0% {
+    //                 transform: rotateY(-$degree); z-index: 1
+    //             }
+    //             50% {
+    //                 transform: rotateY(-$degree) perspective($perspective); z-index: -1
+    //             }
+    //             100% {
+    //                 transform: rotateY(0deg); z-index: 1
+    //             }
+    //         }
+    //     }
+    // }
+
+    // .back {
+    //     position: relative;
+    //     transform: rotateY(-$degree);
+    //     &.flip-to-back {
+    //         animation: back-flip-2 $duration 1 forwards;
+    //         @keyframes back-flip-2 {
+    //             0% {
+    //                 z-index: -1
+    //             }
+    //             50% {
+    //                 transform: rotateY(-$degree) perspective($perspective); z-index: -1
+    //             }
+    //             100% {
+    //                 transform: rotate(0deg); z-index: 1
+    //             }
+    //         }
+    //     }
+
+    //     &.flip-to-front {
+    //         animation: front-flip-2 $duration 1 forwards;
+    //         @keyframes front-flip-2 {
+    //             0% {
+    //                 transform: rotate(0deg); z-index: 1
+    //             }
+    //             50% {
+    //                 transform: rotateY($degree) perspective($perspective); z-index: 1
+    //             }
+    //             100% {
+    //                 transform: rotateY($degree); z-index: -1
+    //             }
+    //         }
+    //     }
+    // }
+
     .submit-method-container {
         display: flex;
         flex-direction: row;
