highlights the input box and raises the margin up a bit

--- a/client_side/client/src/stylesheets/utils/_input.scss
+++ b/client_side/client/src/stylesheets/utils/_input.scss
@@ -1,11 +1,12 @@
 input {
     background-color: coral;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     border: none;
     border-bottom: 2px solid white;
-    
+    margin-top: 0.5rem;
 }
 
 input:focus {
-outline: none;
+    outline: none;
+    background: #caa395;
 }
