--- a/client_side/client/src/stylesheets/utils/_input.scss
+++ b/client_side/client/src/stylesheets/utils/_input.scss
@@ -1,5 +1,6 @@
 input {
     background-color: coral;
+    color: grey;
     font-size: 1.3rem;
     border: none;
     border-bottom: 2px solid white;
