--- a/client_side/client/src/stylesheets/utils/_button.scss
+++ b/client_side/client/src/stylesheets/utils/_button.scss
@@ -15,3 +15,8 @@ select {
     margin-right: 3rem;
 }
 
+@media all and (min-width: 500px) {
+    button, select {
+        font-size: 2.4rem;
+    }
+}
