--- a/client_side/client/src/stylesheets/utils/_input.scss
+++ b/client_side/client/src/stylesheets/utils/_input.scss
@@ -11,3 +11,9 @@ input:focus {
     outline: none;
     background: #caa395;
 }
+
+@media all and (min-width: 500px) {
+    input {
+        font-size: 3rem;
+    }
+}
