--- a/client_side/client/src/stylesheets/utils/_button.scss
+++ b/client_side/client/src/stylesheets/utils/_button.scss
@@ -16,7 +16,10 @@ select {
 }
 
 @media all and (min-width: 500px) {
-    button, select {
+    button {
         font-size: 2.4rem;
+    }
+    select {
+        font-size: 1.7rem;
     }
 }
