--- a/client_side/client/src/stylesheets/components/_nav.scss
+++ b/client_side/client/src/stylesheets/components/_nav.scss
@@ -16,7 +16,13 @@
     }
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 300px) {
+    .nav-container {
+        height: 9vh;
+    }
+}
+
+@media all and (min-width: 400px) {
     .nav-container img {
         width: 200px;
     }
